--- a/workflows/w_MUSE_3D/Snakefile
+++ b/workflows/w_MUSE_3D/Snakefile
@@ -1,9 +1,10 @@
 
-localrules: reorientLPS, bmask_T1T2
+localrules: reorientLPS
 
 rule ALL:
     #input:expand("../../data/{study}/Protocols/MUSE_4D/{mrid}/{mrid}_T1_LPS_N4_brain_muse-ss_Mean_fastbc_muse.nii.gz", study = ['MUSETest'], mrid = ['OAS30001_MR_d0129'])
-    input:expand("../../data/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_brainmask_muse-ss.nii.gz", study = ['MUSETest'], mrid = ['OAS30001_MR_d0129'])
+    #input:expand("../../data/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_brainmask_muse-ss.nii.gz", study = ['MUSETest'], mrid = ['OAS30001_MR_d0129'])
+    input:expand("../../data/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_brainmask_muse-ss_Mean_ICV.nii.gz", study = ['MUSETest'], mrid = ['OAS30001_MR_d0129'])
 
 rule reorientLPS:
     """
@@ -54,9 +55,9 @@ rule bmask_T1T2:
         t1="../../data/{study}/Protocols/BiasCorrected/{mrid}/{mrid}_T1_LPS_N4.nii.gz",
         t2="../../data/{study}/Protocols/BiasCorrected/{mrid}/{mrid}_T2_LPS_N4.nii.gz",
         #bmask="../../data/{study}/Protocols/Skull-Stripped_4D/{mrid}/{mrid}_T1_LPS_N4_brain_muse-ss_Mean.nii.gz",
-        rank="../../data/{study}/Protocols/Skull-Stripped_4D/{mrid}/{mrid}_T1_LPS_N4_ROI_1_SimRank_Mean.nii.gz",
+        rank="../../data/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_ROI_1_SimRank.nii.gz",
     output:
-        "../../data/{study}/Protocols/Skull-Stripped_T2/{mrid}/{mrid}_T1_LPS_N4_brainmask_muse-ss_Mean_ICV.nii.gz"
+        fout="../../data/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_brainmask_muse-ss_Mean_ICV.nii.gz"
     params:
         T2ICViter='100',
         T2ICVminsd='-1',
@@ -65,8 +66,8 @@ rule bmask_T1T2:
     resources:
         mem_mb=8000,
     shell:
-        "echo python GenerateICVmask.py -i {input.t1} -r {input.t2} -j {input.rank} -o {output.fout} -n {params.T2ICViter} -l {params.T2ICVminsd} -h {params.T2ICVmaxsd} -t {params.T2ICVtol}; "
-        "python GenerateICVmask.py -i {input.t1} -r {input.t2} -j {input.rank} -o {output.fout} -n {params.T2ICViter} -l {params.T2ICVminsd} -h {params.T2ICVmaxsd} -t {params.T2ICVtol}; "
+        "echo bash ./utils/util_bmask_T1T2.sh {input} {params} {output}; "
+        "bash ./utils/util_bmask_T1T2.sh {input} {params} {output}"
 
 rule biascorr_FAST:
     """
