--- a/workflows/w_SurrealGAN/Snakefile
+++ b/workflows/w_SurrealGAN/Snakefile
@@ -13,8 +13,9 @@ LIST_HMUSE_NAMES = df.Name.tolist()
 rule ALL:
     #input:"../../data/SurrealGAN/prep/SurrealGAN_testISTAG.csv"
     #input:"../../data/SurrealGAN/prep/SurrealGAN_NatureMed_train.csv"
-    input:"../../data/SurrealGAN/data/SurrealGAN_NatureMed_train_demog.csv"
-    #input:"../../data/SurrealGAN/model/SurrealGAN_trainADNI2_BL/converged_model_fold2"
+    #input:"../../data/SurrealGAN/data/SurrealGAN_NatureMed_train_demog.csv"
+    #input:"../../data/SurrealGAN/data/SurrealGAN_ISTAG_test_demog.csv"
+    input:"../../data/SurrealGAN/model/SurrealGAN_NatureMed/converged_model_fold2"
     
 #################################    
 ## Prep data
@@ -37,7 +38,7 @@ rule select_sample:
         "echo python utils/util_select_sample.py {input} {params} {output}; "
         "python utils/util_select_sample.py {input} {params} {output}"
 
-rule prep_surrealgan_train_data:
+rule prep_surrealgan_data:
     '''
     Split input data into demog and roi files
     '''
@@ -60,19 +61,20 @@ rule smilegan_train_folds:
     Train SurrealGAN model
     '''
     input:
-        demog="../../data/SurrealGAN/data/SurrealGAN_{stype}_demog.csv",
-        roi="../../data/SurrealGAN/data/SurrealGAN_{stype}_rois.csv",
+        demog="../../data/SurrealGAN/data/SurrealGAN_{stype}_train_demog.csv",
+        roi="../../data/SurrealGAN/data/SurrealGAN_{stype}_train_rois.csv",
     output:
         "../../data/SurrealGAN/model/SurrealGAN_{stype}/converged_model_fold{fold}"
     params:
-        ncluster = '4',
+        npattern = '4',
+        final_saving_epoch = '63000',
         fold="{fold}",
-        numfold='20'
+        numfold='50',
     resources:
         mem_mb=16000
     shell:
-        "echo bash ./utils/util_run_smilegan_train_folds {input} {params} {output}; " 
-        "bash ./utils/util_run_smilegan_train_folds {input} {params} {output}" 
+        "echo bash ./utils/util_surrealgan_train_folds.sh {input} {params} {output}; " 
+        "bash ./utils/util_surrealgan_train_folds.sh {input} {params} {output}" 
         
 rule SurrealGAN_test:
     '''
