--- a/workflows/w_SurrealGAN/Snakefile
+++ b/workflows/w_SurrealGAN/Snakefile
@@ -4,8 +4,12 @@ configfile: "../../config/config.yaml"
 
 ## Read lists
 import pandas as pd
+import numpy as np
+
 df = pd.read_csv(config["list_MUSE_ISTAGHarmonized"])
 LIST_HMUSE_NAMES = df.Name.tolist()
+
+LIST_FOLDS = [str(x) for x in range(1, 10)]
 
 ###################################
 ## Function definitions
@@ -17,7 +21,8 @@ rule ALL:
     #input:"../../data/SurrealGAN/prep/SurrealGAN_NatureMed_train.csv"
     #input:"../../data/SurrealGAN/data/SurrealGAN_NatureMed_train_demog.csv"
     #input:"../../data/SurrealGAN/data/SurrealGAN_ISTAG_test_demog.csv"
-    input:"../../data/SurrealGAN/model/SurrealGAN_NatureMed/converged_model_fold2"
+    #input:"../../data/SurrealGAN/model/SurrealGAN_NatureMed/converged_model_fold2"
+    input:expand("../../data/SurrealGAN/model/SurrealGAN_NatureMed/converged_model_fold{foldno}", foldno = LIST_FOLDS)
     
 #################################    
 ## Prep data
@@ -57,8 +62,7 @@ rule prep_surrealgan_data:
 
 #################################    
 ## Run training
-
-rule smilegan_train_folds:
+rule surrealgan_train_folds:
     '''
     Train SurrealGAN model
     '''
@@ -69,29 +73,32 @@ rule smilegan_train_folds:
         "../../data/SurrealGAN/model/SurrealGAN_{stype}/converged_model_fold{fold}"
     params:
         npattern = '4',
-        final_saving_epoch = '63000',
+        #final_saving_epoch = '63000',
+        final_saving_epoch = '6300',
         fold="{fold}",
-        numfold='50',
+        #numfold='50',
+        numfold='10',
     resources:
         mem_mb=32000
     shell:
         "echo bash ./utils/util_surrealgan_train_folds.sh {input} {params} {output}; " 
         "bash ./utils/util_surrealgan_train_folds.sh {input} {params} {output}" 
         
-rule SurrealGAN_test:
+rule surrealgan_test:
     '''
-    Test SurrealGAN model using the split test sample
+    Test SurrealGAN model using the pretrained model
     '''
     input:
-        data="../../data/SurrealGAN/s{stype}/r{rtype}/data/NiChart_DLMUSE_{dtype}_test.csv",
-        mdl="../../data/SurrealGAN/s{stype}/r{rtype}/models/NiChart_DLMUSE_{dtype}_model.pkl.gz"
+        demog="../../data/SurrealGAN/data/SurrealGAN_{stype}_test_demog.csv",
+        roi="../../data/SurrealGAN/data/SurrealGAN_{stype}_test_rois.csv",
+        mdl="../../models/SurrealGAN/surrealgan_model_{mtype}"
     output:
-        csv="../../data/SurrealGAN/s{stype}/r{rtype}/pred/NiChart_DLMUSE_{dtype}_pred.csv"
+        csv="../../data/SurrealGAN/pred/{stype}/pred_m{mtype}.csv"
     resources:
-        mem_mb=16000
+        mem_mb=32000
     shell:
-        "echo spare_score -a test -i {input.data} -m {input.mdl} -o {output.csv}; "
-        "spare_score -a test -i {input.data} -m {input.mdl} -o {output.csv}"
+        "echo bash ./utils/util_surrealgan_test.sh {input} {params} {output}; " 
+        "bash ./utils/util_surrealgan_test.sh {input} {params} {output}" 
 
 rule SurrealGAN_eval:
     '''
