--- a/workflows/w_MUSE_3D/Snakefile
+++ b/workflows/w_MUSE_3D/Snakefile
@@ -1,98 +1,137 @@
-
+## Flag to indicate rules that will be run locally (e.g. not submitted to slurm)
 localrules: reorientLPS
+    
+### Report data
+#report: "report/workflow.rst"
+
+## Config file
+configfile: "../../config/config_MUSE_3D.yaml"
+
+###################################
+## Out file names
+
+OUT_CONFIG = expand("../../data/{dir_output}/config/{cname}", cname = ["config_MUSE_3D.yaml", "list_MUSE_all.csv"], dir_output = config["dir_output"])
+
+#OUT_RESULTS = expand("../../data/{dir_output}/combined/NiChart_{dtype}_{ctype}.csv", dtype = config["roi_types"], ctype = config["corr_types"], dir_output = config["dir_output"])
+
+#OUT_RESULTS = expand("../../data/{dir_output}/{study}/Protocols/ReOrientedLPS/{mrid}/{mrid}_{mod}_LPS.nii.gz", dtype = config["roi_types"], ctype = config["corr_types"], dir_output = config["dir_output"])
+
+#OUT_RESULTS = expand("../../data/{dir_output}/{study}/Protocols/ReOrientedLPS/{mrid}/{mrid}_{mod}_LPS.nii.gz", study = ["Study1"], mrid = ["OAS30001_MR_d0129", "OAS30407_MR_d0061"], mod = ["T1"], dir_output = config["dir_output"])
+
+OUT_RESULTS = expand("../../data/{dir_output}/{study}/Protocols/MUSE/{mrid}/{mrid}_T1_LPS_N4_brain_muse-ss_fastbc_muse.nii.gz", study = ["Study1"], mrid = ["OAS30001_MR_d0129", "OAS30407_MR_d0061"], dir_output = config["dir_output"])
+
+"../../data/{dir_output}/{study}/Protocols/MUSE/{mrid}/{mrid}_T1_LPS_N4_brain_muse-ss_fastbc_muse.nii.gz"
+
+OUT_FILES = OUT_CONFIG + OUT_RESULTS
+#OUT_FILES = OUT_CONFIG
+
+#print("Target out files:" + '\n' + '\n'.join(OUT_FILES) + '\n')
+
+###################################
+## Rules
 
 rule ALL:
-    #input:expand("../../data/{study}/Protocols/MUSE_4D/{mrid}/{mrid}_T1_LPS_N4_brain_muse-ss_Mean_fastbc_muse.nii.gz", study = ['MUSETest'], mrid = ['OAS30001_MR_d0129'])
-    #input:expand("../../data/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_brainmask_muse-ss.nii.gz", study = ['MUSETest'], mrid = ['OAS30001_MR_d0129'])
-    #input:expand("../../data/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_brainmask_muse-ss_ICV.nii.gz", study = ['MUSETest'], mrid = ['OAS30001_MR_d0129'])
-    #input:expand("../../data/{study}/Protocols/fastbc/{mrid}/{mrid}_T1_LPS_N4_brain_muse-ss_fastbc.nii.gz", study = ['MUSETest'], mrid = ['OAS30001_MR_d0129'])
-    input:expand("../../data/{study}/Protocols/MUSE/{mrid}/{mrid}_T1_LPS_N4_brain_muse-ss_fastbc_muse.nii.gz", study = ['MUSETest'], mrid = ['OAS30001_MR_d0129'])
+    '''
+    First rule: lists the final expected out files
+    '''
+    input: OUT_FILES
 
-#rule reorientLPS:
-    #"""
-    #Reorient a 3D image to LPS orientation
-    #"""
-    #input:
-        #"../../data/{study}/Data/RenamedNifti/{mrid}/{mrid}_{mod}.nii.gz"
-    #output:
-        #"../../data/{study}/Protocols/ReOrientedLPS/{mrid}/{mrid}_{mod}_LPS.nii.gz"
-    #resources:
-        #mem_mb=8000,
-    #shell:
-        #"bash ./utils/util_reorientLPS.sh {input} {output}"
+rule copy_config:
+    '''
+    Rule for copying config files to output dir
+    '''
+    input:
+        "../../config/{cname}"
+    output:
+        expand("../../data/{dir_output}/config/{{cname}}", dir_output = config["dir_output"])
+    shell:
+        "cp -v {input} {output}"
+    
+rule reorientLPS:
+    """
+    Reorient a 3D image to LPS orientation
+    """
+    input:
+        expand("../../data/{dir_input}/{{study}}/MRI/RenamedNifti/{{mrid}}/{{mrid}}_{{mod}}.nii.gz", dir_input = config["dir_input"])
+    output:
+        "../../data/{dir_output}/{study}/Protocols/ReOrientedLPS/{mrid}/{mrid}_{mod}_LPS.nii.gz"
+    resources:
+        mem_mb=8000,
+    shell:
+        "bash ./utils/util_reorientLPS.sh {input} {output}"
 
-#rule biascorr_N4:
-    #"""
-    #N4 bias correction
-    #"""
-    #input:
-        #"../../data/{study}/Protocols/ReOrientedLPS/{mrid}/{mrid}_{mod}_LPS.nii.gz"
-    #output:
-        #"../../data/{study}/Protocols/BiasCorrected/{mrid}/{mrid}_{mod}_LPS_N4.nii.gz"
-    #resources:
-        #mem_mb=8000,
-    #shell:
-        #"bash ./utils/util_biascorr_N4.sh {input} {output}"
+rule biascorr_N4:
+    """
+    N4 bias correction
+    """
+    input:
+        "../../data/{dir_output}/{study}/Protocols/ReOrientedLPS/{mrid}/{mrid}_{mod}_LPS.nii.gz"
+    output:
+        "../../data/{dir_output}/{study}/Protocols/BiasCorrected/{mrid}/{mrid}_{mod}_LPS_N4.nii.gz"
+    resources:
+        mem_mb=8000,
+    shell:
+        "bash ./utils/util_biascorr_N4.sh {input} {output}"
 
-#rule bmask_MUSE:
-    #"""
-    #MUSE skull stripping
-    #- Applied to all images, both BL and FU
-    #"""
-    #input:
-        #fin="../../data/{study}/Protocols/BiasCorrected/{mrid}/{mrid}_T1_LPS_N4.nii.gz",
-        #cont="../../resources/Container/CBICApipeline_centos7.sif"
-    #output:
-        #"../../data/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_brainmask_muse-ss.nii.gz",
-    #resources:
-        #mem_mb=32000
-    #shell:
-        #"bash ./utils/util_bmask_MUSE_singularity_wrapper.sh {input} {output}"
+rule bmask_MUSE:
+    """
+    MUSE skull stripping
+    - Applied to all images, both BL and FU
+    """
+    input:
+        fin="../../data/{dir_output}/{study}/Protocols/BiasCorrected/{mrid}/{mrid}_T1_LPS_N4.nii.gz",
+        cont="../../resources/Container/CBICApipeline_centos7.sif"
+    output:
+        "../../data/{dir_output}/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_brainmask_muse-ss.nii.gz",
+    resources:
+        mem_mb=32000
+    shell:
+        "bash ./utils/util_bmask_MUSE_singularity_wrapper.sh {input} {output}"
 
-#rule apply_bmask:
-    #"""
-    #Apply mask to T1 image
-    #"""
-    #input:
-        #fin="../../data/{study}/Protocols/BiasCorrected/{mrid}/{mrid}_T1_LPS_N4.nii.gz",
-        #fmask="../../data/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_brainmask_muse-ss.nii.gz",
-    #output:
-        #"../../data/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_brain_muse-ss.nii.gz",
-    #resources:
-        #mem_mb=8000
-    #shell:
-        #"echo bash ./utils/util_apply_bmask.sh {input} {output}; "
-        #"bash ./utils/util_apply_bmask.sh {input} {output}"
+rule apply_bmask:
+    """
+    Apply mask to T1 image
+    """
+    input:
+        fin="../../data/{dir_output}/{study}/Protocols/BiasCorrected/{mrid}/{mrid}_T1_LPS_N4.nii.gz",
+        fmask="../../data/{dir_output}/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_brainmask_muse-ss.nii.gz",
+    output:
+        "../../data/{dir_output}/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_brain_muse-ss.nii.gz",
+    resources:
+        mem_mb=8000
+    shell:
+        "echo bash ./utils/util_apply_bmask.sh {input} {output}; "
+        "bash ./utils/util_apply_bmask.sh {input} {output}"
 
-#rule icvmask_T1T2:
-    #"""
-    #T2 based skull stripping
-    #"""
-    #input:
-        #t1="../../data/{study}/Protocols/BiasCorrected/{mrid}/{mrid}_T1_LPS_N4.nii.gz",
-        #t2="../../data/{study}/Protocols/BiasCorrected/{mrid}/{mrid}_T2_LPS_N4.nii.gz",
-        #rank="../../data/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_ROI_1_SimRank.nii.gz",
-    #output:
-        #fout="../../data/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_brainmask_muse-ss_ICV.nii.gz"
-    #params:
-        #T2ICViter='100',
-        #T2ICVminsd='-1',
-        #T2ICVmaxsd='100',
-        #T2ICVtol='0.00001',
-    #resources:
-        #mem_mb=8000,
-    #shell:
-        #"echo bash ./utils/util_bmask_T1T2.sh {input} {params} {output}; "
-        #"bash ./utils/util_bmask_T1T2.sh {input} {params} {output}"
+rule icvmask_T1T2:
+    """
+    T2 based skull stripping
+    """
+    input:
+        t1="../../data/{dir_output}/{study}/Protocols/BiasCorrected/{mrid}/{mrid}_T1_LPS_N4.nii.gz",
+        t2="../../data/{dir_output}/{study}/Protocols/BiasCorrected/{mrid}/{mrid}_T2_LPS_N4.nii.gz",
+        rank="../../data/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_ROI_1_SimRank.nii.gz",
+    output:
+        fout="../../data/{dir_output}/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_brainmask_muse-ss_ICV.nii.gz"
+    params:
+        T2ICViter='100',
+        T2ICVminsd='-1',
+        T2ICVmaxsd='100',
+        T2ICVtol='0.00001',
+    resources:
+        mem_mb=8000,
+    shell:
+        "echo bash ./utils/util_bmask_T1T2.sh {input} {params} {output}; "
+        "bash ./utils/util_bmask_T1T2.sh {input} {params} {output}"
 
 rule biascorr_FAST:
     """
     FAST bias correction
     """
     input:
-        "../../data/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_brain_muse-ss.nii.gz"
+        "../../data/{dir_output}/{study}/Protocols/Skull-Stripped/{mrid}/{mrid}_T1_LPS_N4_brain_muse-ss.nii.gz"
     output:
-        "../../data/{study}/Protocols/fastbc/{mrid}/{mrid}_T1_LPS_N4_brain_muse-ss_fastbc.nii.gz"
+        "../../data/{dir_output}/{study}/Protocols/fastbc/{mrid}/{mrid}_T1_LPS_N4_brain_muse-ss_fastbc.nii.gz"
     resources:
         mem_mb=8000,
     shell:
@@ -103,10 +142,10 @@ rule MUSE:
     Run MUSE
     """
     input:
-        fin="../../data/{study}/Protocols/fastbc/{mrid}/{mrid}_T1_LPS_N4_brain_muse-ss_fastbc.nii.gz",
+        fin="../../data/{dir_output}/{study}/Protocols/fastbc/{mrid}/{mrid}_T1_LPS_N4_brain_muse-ss_fastbc.nii.gz",
         cont="../../resources/Container/CBICApipeline_centos7.sif"
     output:
-        "../../data/{study}/Protocols/MUSE/{mrid}/{mrid}_T1_LPS_N4_brain_muse-ss_fastbc_muse.nii.gz"
+        "../../data/{dir_output}/{study}/Protocols/MUSE/{mrid}/{mrid}_T1_LPS_N4_brain_muse-ss_fastbc_muse.nii.gz"
     resources:
         mem_mb=48000,
     shell:
